--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+            java.srcDirs = ['src/main/java']
+            resources.srcDirs = ['src/main/resources']
+//            aidl.srcDirs = ['src/main/aidl']
+//            renderscript.srcDirs = ['src/maom']
+            res.srcDirs = ['src/main/res']
+//            assets.srcDirs = ['src/main/assets']
+//            jniLibs.srcDir 'src/main/jniLibs'
+        }
+    }
 }
 
 dependencies {
@@ -33,4 +46,5 @@ dependencies {
     compile files('libs/xUtils-2.6.14.jar')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/sun.misc.BASE64Decoder.jar')
+    compile files('libs/zbar.jar')
 }
