--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,7 +90,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan" />
 
-        <!-- 消费记录页 -->
+        <!-- 消费记录页 废弃-->
         <activity
             android:name=".activity.PurchaseHistoryActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
